<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnPdfViewer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_pdf_viewer"
        android:textAllCaps="false"
        android:backgroundTint="#4CAF50"
        android:textColor="#FFFFFF"
        android:padding="12dp" />

    <Button
        android:id="@+id/btnImagePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/image_picker"
        android:textAllCaps="false"
        android:backgroundTint="#FF9800"
        android:textColor="#FFFFFF"
        android:padding="12dp"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnApiList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_api_response_list"
        android:textAllCaps="false"
        android:backgroundTint="#2196F3"
        android:textColor="#FFFFFF"
        android:padding="12dp"
        android:layout_marginTop="16dp"/>

</LinearLayout>