<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp"
    android:orientation="horizontal"
    android:background="?android:attr/selectableItemBackground"
    android:gravity="center_vertical">

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_green_dark" />

        <TextView
            android:id="@+id/textData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imgOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_arrow_drop_down_24"
        android:contentDescription="@string/options"
        android:padding="8dp"
        app:tint="#E66A45" />
</LinearLayout>